<resources>
    <string name="app_name">ReRead</string>
    <string name="capture">Capture</string>
    <string name="reread">ReRead</string>
    <string name="your_result_will_appear_here">Your Result Will Appear Here</string>
    <string name="snap">Snap</string>
    <string name="detect">Detect</string>
    <string name="search_on_google">Search On Google</string>
    <string name="share_to">Share To</string>
</resources>