<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/custom_button"
    tools:context=".ScannerActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="231dp"
        android:layout_height="202dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        tools:ignore="ContentDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/resultScreen"
        android:layout_width="337dp"
        android:layout_height="232dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/your_result_will_appear_here"
        android:textColor="#5D4037"
        android:textColorHint="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <Button
        android:id="@+id/snapBtn"
        android:layout_width="194dp"
        android:layout_height="63dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="@color/grey"
        android:text="@string/snap"
        android:textColor="@color/black"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareBtn"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/detectBtn"
        android:layout_width="194dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/grey"
        android:text="@string/detect"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="194dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/grey"
        android:text="@string/search_on_google"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="194dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/grey"
        android:text="@string/share_to"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687" />


</androidx.constraintlayout.widget.ConstraintLayout>